新しいスライド「最近コード読んでる？」を追加し、関連する画像を含む内容を充実させました。また、package.jsonに新しい開発スクリプトを追加し、不要なメモファイルを削除しました。

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev:20250630": "slidev --open slides/20250630.md",
     "dev:20250530": "slidev --open slides/20250530.md",
     "dev:20251104": "slidev --open slides/20251104.md",
+    "dev:20260126": "slidev --open slides/20260126.md",
     "build": "npm run build",
     "export": "slidev export"
   },
